--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,9 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
+  <depend>libboost-all-dev</depend>
+  <depend>libpcl-all-dev</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
