--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
-  <depend>libboost-all-dev</depend>
+  <depend>boost</depend>
   <depend>libpcl-all-dev</depend>
 
 
