--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ ament_target_dependencies(laser_scan_integrator
   rclcpp 
   std_msgs 
   sensor_msgs
+  tf2_sensor_msgs
   rcl_interfaces
   rcutils
   tf2_geometry_msgs
