--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   
   <depend>rcl_interfaces</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2_sensor_msgs</depend>
   <depend>rcutils</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2</depend>
