--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,15 @@
   
   <depend>rcl_interfaces</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2_sensor_msgs</depend>
   <depend>rcutils</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
+  <depend>boost</depend>
+  <depend>libpcl-all-dev</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
