--- a/package.xml
+++ b/package.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>laser_scan_integrator</name>
   <version>1.0.0</version>
-  <description>A Package to combine several laser scan value</description>
+  <description>A package to combine several laser scan values</description>
   <maintainer email="hijikata@daihen.co.jp">Masaaki Hijikata</maintainer>
-  <license>Apache Lisence 2.0</license>
+  <license>Apache License 2.0</license>
 
+  <!-- Build tool dependencies -->
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <!-- Build and exec dependencies -->
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  
   <depend>rcl_interfaces</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2_sensor_msgs</depend>
@@ -20,10 +20,12 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
-  <depend>boost</depend>
-  <depend>libpcl-all-dev</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pcl_msgs</depend>
+  <depend>pcl_ros</depend>
+  <depend>laser_scan_integrator_msg</depend>
 
-
+  <!-- Test dependencies -->
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
@@ -31,3 +33,4 @@
     <build_type>ament_cmake</build_type>
   </export>
 </package>
+
