--- a/laser_scan_mapper/CMakeLists.txt
+++ b/laser_scan_mapper/CMakeLists.txt
@@ -14,32 +14,68 @@ find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(laser_scan_integrator_msg REQUIRED)
+find_package(ament_index_cpp REQUIRED)
+find_package(yaml-cpp REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(visualization_msgs REQUIRED)
+
+
+###Test###
+add_executable(test_listner src/test.cpp)
+ament_target_dependencies(
+    test_listner
+    geometry_msgs
+    rclcpp
+    tf2
+    tf2_ros
+)
+##########
+
 
 add_executable(tf_publisher src/tf_publisher.cpp)
+ament_target_dependencies(
+  tf_publisher
+  rclcpp 
+  tf2_ros 
+  geometry_msgs
+  ament_index_cpp
+)
+target_link_libraries(tf_publisher yaml-cpp::yaml-cpp)
+
 add_executable(mapper src/mapper.cpp)
-
 ament_target_dependencies(
-tf_publisher 
-rclcpp 
-tf2_ros 
-geometry_msgs
+  mapper
+  rclcpp 
+  tf2_ros 
+  tf2 
+  tf2_geometry_msgs 
+  geometry_msgs
+  laser_scan_integrator_msg
+  Eigen3
+  ament_index_cpp
+  visualization_msgs
+)
+target_link_libraries(mapper
+  tf2::tf2
+  tf2_geometry_msgs::tf2_geometry_msgs
+  tf2_ros::tf2_ros
+  yaml-cpp::yaml-cpp
 )
 
-ament_target_dependencies(
-mapper 
-rclcpp 
-tf2_ros 
-tf2 
-tf2_geometry_msgs 
-geometry_msgs
-laser_scan_integrator_msg
-)
-
+###Test###
+install(TARGETS
+    test_listner
+    DESTINATION lib/${PROJECT_NAME})
+##########
 
 install(TARGETS 
 tf_publisher 
 mapper 
 DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}
 )
 
 
