--- a/laser_scan_mapper/package.xml
+++ b/laser_scan_mapper/package.xml
@@ -16,6 +16,11 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>laser_scan_integrator_msg</depend>
+  <depend>yaml-cpp</depend>
+  <depend>ament_index_cpp</depend>
+  <depend>Eigen3</depend>
+  <depend>visualization_msgs</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
