--- a/laser_scan_integrator/package.xml
+++ b/laser_scan_integrator/package.xml
@@ -23,6 +23,7 @@
   <depend>pcl_conversions</depend>
   <depend>pcl_msgs</depend>
   <depend>pcl_ros</depend>
+  <depend>visualization_msgs</depend>
   <depend>laser_scan_integrator_msg</depend>
 
   <!-- Test dependencies -->
