--- a/laser_scan_mapper/package.xml
+++ b/laser_scan_mapper/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>laser_scan_mapper</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Messages for the laser scan integrator</description>
   <maintainer email="sam.tho.koehler@gmail.com">sam</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
